= Package NNbenchmark =
- Akshaj Verma, Salabila Mahdi, Patrice Kiener
- Christophe Dutang, John Nash 



NNbenchmark 3.1.0 - 2020-08-24 - Submitted to CRAN
==================================================
-chenge version number and sent to CRAN

NNbenchmark 3.0.7 - 2020-08-24
==============================
- simplify clearNN()
- Christophe Dutang added as author
- Email address: rpackages--@--inmodelia
- false link replaced by the table header "Packages" in README.md
- NNtrainPredict.R: odir <- tempdir() rather than getwd()

NNbenchmark 3.0.5 - 2020-07-30
==============================
- allow for nrep = 1
- added examples to NNtrainPredict
- changed echoreport to logical

NNbenchmark 3.0.4 - 2020-07-03
==============================
- remove commented traces
- add an argument to trainPredict_1mth1data()
- add mWoodG1 rda file (Simon Wood's GAM test file for Gaussian family)

NNbenchmark 3.0.3 - 2020-06-29
==============================
- NNtrainPredict now has the options for csv outputs, same as 2019 legacy code
- round time objects in NNsummary

NNbenchmark 3.0.2 - 2020-06-29
==============================
- adjusted NNtrainPredict and NNsummary functions to new timing functions


NNbenchmark 3.0.1 - 2020-06-27
==============================
- DESCRIPTION: Roxygen: list(old_usage = TRUE)
- timestart(), timediff()


NNbenchmark 3.0.0 - 2020-06-21 (Bila + Patrice)
===============================================
- NNTrain_Predict.R for NEW 2020 code do.call() implementation to train and predict NNs
- Move NNbenchmark2020 to top directory. This is new NNbenchmark
- Move NNbenchmark2019 to a new directory
- Fix the date in DESCRIPTION

NNbenchmark 2.3.7 - 2020-06-19 (Bila)
=====================================
- Added MSE and WAE to funRMSE.R
- Made a new R file: NNSummary.R for 2020 summary function

NNbenchmark 2.3.6 - 2020-01-11
==============================
- ht() and ht9() fully rewritten. Accept now array and data.frame with matrices inside