@@ -4,14 +4,22 @@ Description: Datasets and functions to benchmark (convergence, speed, ease of us
 Imports: R6, pkgload
 Suggests: brnn, validann
 Depends: R (>= 3.5.0)
-Version: 3.1.0
-Date: 2020-08-24
+Version: 3.1.1
+Date: 2020-08-26
 License: GPL-2
 Maintainer: Patrice Kiener <rpackages@inmodelia.com>
 Author: Patrice Kiener [aut, cre],
+  Christophe Dutang [aut],
   Salsabila Mahdi [aut],
   Akshaj Verma [aut],
-  Christophe Dutang [aut]
+  Yifu Yan [ctb]
+Authors@R: c(
+    person("Patrice", "Kiener", role = c("aut", "cre"), email = "fattailsr@inmodelia.com", comment = c(ORCID = "0000-0002-0505-9920")),
+    person("Christophe", "Dutang", role = "aut", email = "christophe.dutang@ensimag.fr"),
+    person("Salsabila", "Mahdi", role = "aut", email = "bila.mahdi@mhs.unsyiah.ac.id"),
+    person("Akshaj", "Verma", role = "aut", email = "akshajverma7@gmail.com"),
+    person("Yifu", "Yan", role = "ctb", email = "yanyifu94@hotmail.com")
+    ) 
 Encoding: UTF-8
 NeedsCompilation: no
 LazyData: true
