@@ -4,7 +4,9 @@ export(NNdataSummary)
 export(NNsummary)
 export(add2csv)
 export(cc)
+export(clearNN)
 export(createTimer)
+export(detachNN)
 export(funMAE)
 export(funMSE)
 export(funRMSE)
