@@ -1,17 +1,12 @@
 ## clearNN 2019-08-04
 
 
-#' @title Clean the .GlobalEnv and Detach the Loaded Packages
+#' @title Detach the Loaded Packages and the ZZ object
 #' @description
-#' \code{clearNN} cleans the first environment \code{ls(.GlobalEnv)} from objects 
-#' not listed in \code{donotremove} and detach the loaded packages and their 
-#' dependencies not listed in \code{donotdetach}.
+#' \code{clearNN} detachs \code{ZZ} and the packages loaded for the evaluation. 
 #' 
-#' \code{detachNN()} removes \code{ZZ} and all objects in \code{ls(.GlobalEnv)} 
-#' not listed in \code{donotremove}. It does not detach any packages.
-#' 
-#' These functions were not exported to comply with CRAN's Repository Policy.
-#'  
+#' \code{detachNN} detachs \code{ZZ}. 
+#'   
 #' @param  donotremove  a vector of characters representing objects in \code{ls()}.
 #' @param  donotdetach  a vector of packages and environments that are not detached.
 #'                      \code{donotdetach = NULL} protects the packages and environments 
@@ -29,6 +24,7 @@
 #' @return  
 #' NULL
 #' 
+#' @export
 #' @name clearNN
 clearNN <- function (donotremove, donotdetach = NULL) { 
     if (is.null(donotdetach)) donotdetach <- c(".GlobalEnv", 
@@ -54,19 +50,24 @@ clearNN <- function (donotremove, donotdetach = NULL) {
            lapply(setdiff(search(), donotdetach), detach, unload = TRUE, 
                   character.only = TRUE, force = TRUE),
            warning = function(w) {})
-#    while (length(setdiff(ls(.GlobalEnv), donotremove)) > 0) remove(           
-#          list = setdiff(ls(.GlobalEnv), donotremove), envir = .GlobalEnv)
+##    while (length(setdiff(ls(.GlobalEnv), donotremove)) > 0) remove(           
+##          list = setdiff(ls(.GlobalEnv), donotremove), envir = .GlobalEnv)
 }
 
-
+#' @export
 #' @rdname clearNN
-detachNN <- function (donotremove, donotdetach = "") {           
-    if (!is.element("ZZ", donotdetach)) {    
-        while ("ZZ" %in% search()) detach("ZZ", character.only = TRUE)
-    }
-#    while (length(setdiff(ls(.GlobalEnv), donotremove)) > 0) remove(           
-#          list = setdiff(ls(.GlobalEnv), donotremove), envir = .GlobalEnv)
+detachNN <- function() {  
+	while ("ZZ" %in% search()) detach("ZZ", character.only = TRUE)
 }
 
+
+## #' @rdname clearNN
+## detachNN <- function (donotremove, donotdetach = "") {           
+##    if (!is.element("ZZ", donotdetach)) {    
+##        while ("ZZ" %in% search()) detach("ZZ", character.only = TRUE)
+##    }
+##    while (length(setdiff(ls(.GlobalEnv), donotremove)) > 0) remove(           
+##          list = setdiff(ls(.GlobalEnv), donotremove), envir = .GlobalEnv)
+## }
 
 
